<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                            tools:context=".fragments.LoginFragment" android:id="@+id/LoginConstraintLayout">

    <Button
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/btnBack"
            android:background="@drawable/ic_arrow_back_black_24_px"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="22dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/greyish_brown"
            android:lineSpacingExtra="8sp"
            android:id="@+id/txtView"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/authorization_text"
            app:layout_constraintStart_toEndOf="@+id/btnBack"
            android:layout_marginStart="32dp"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:text="@string/create_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCreate"
            android:textSize="15sp"
            android:textStyle="normal"
            android:fontFamily="sans-serif-medium"
            android:background="@color/colorPrimary"
            android:textColor="@color/dark_sky_blue"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:lineSpacingExtra="13sp"
            android:layout_marginEnd="21dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="22dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColorHint="@color/brownish_grey"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="113dp"
            app:layout_constraintTop_toTopOf="parent"
            app:hintTextAppearance="@style/LoginHintText"
            app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/tie_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_marginBottom="8dp"
                android:freezesText="false"
                android:gravity="start|center_vertical"
                android:hint="@string/email_hint"
                android:inputType="text|textEmailAddress"
                android:singleLine="true"
                android:theme="@style/LoginEditText"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColorHint="@color/brownish_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/til_email"
            app:hintTextAppearance="@style/LoginHintText"
            app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/tie_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_marginBottom="8dp"
                android:freezesText="false"
                android:gravity="start|center_vertical"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:theme="@style/LoginEditText"
                android:imeOptions="actionDone"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/btnPassword"
            android:background="@drawable/ic_password"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="36dp"
            app:layout_constraintTop_toTopOf="@+id/til_password"
            app:layout_constraintBottom_toBottomOf="@+id/til_password"
            app:layout_constraintVertical_bias="0.371"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnEnter"
            android:layout_marginTop="23dp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/til_password"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:text="@string/enter_text"
            android:background="@color/tangerine"/>


</android.support.constraint.ConstraintLayout>